hphp/test/zend/bad/Zend/tests/bug62097.php
<?php
var_dump("02147483647" == "2147483647",
		 "02147483648" == "2147483648",
		 "09007199254740991" == "9007199254740991",
		 "09007199254740992" == "9007199254740992");